# network-engineering-security-foundation

./: .gitignore  01_START_HERE.md  02_RUN_FIRST_ON_PHONE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  validate_repo.sh
.github/workflows/: ci.yml  lint.yml
configs/: 01_START_HERE.md  sample_dns.conf  sample_frr_ospfd.conf  sample_haproxy.cfg  sample_iptables.conf  sample_keepalived.conf  sample_suricata_lab.rules  sample_ufw.conf  sample_wireguard.conf  sample_zeek_local.zeek
docs/: 01_START_HERE.md  CORE_CONCEPTS.md  CV_READY_SUMMARY.md  LESSON_EXECUTION_COMPANION.md  LESSON_RESEARCH_ANALYSIS_COMPANION.md  OFFLINE_INDEX.md  PORTFOLIO_SKILL_MAPPING.md  PROJECT_MANUAL.md  README.md  REPOSITORY_STATUS_REPORT.md
docs/advanced_infrastructure/: 01_START_HERE.md  load_balancer_operations.md  ospf_foundations_with_frr.md  vrrp_keepalived_fundamentals.md
environment/: 01_START_HERE.md  lab_network_diagram.md  recommended_vm_topology.md  ubuntu_lab_setup.md
incidents/: 01_START_HERE.md  ticket_01_port_blocked.md  ticket_02_dns_outage.md  ticket_03_packet_loss_alert.md  ticket_04_firewall_rule_misconfig.md  ticket_05_latency_spike.md  ticket_06_vlan_trunk_mismatch.md  ticket_07_dhcp_scope_failure.md  ticket_08_alert_flood_triage.md  ticket_09_vrrp_failover_drift.md  ticket_10_load_balancer_backend_failure.md
labs/: 01_START_HERE.md
scripts/: 01_START_HERE.md  firewall_reset.sh  network_diagnostics.sh  simulate_latency.sh  simulate_packet_loss.sh  triage_eve_sample.py
tests/: 01_START_HERE.md  test_triage_eve_sample.py
(+134 files in other folders)
